@@ -1,3 +1,13 @@
+2010-02-23	Sergey S. Sergeev
+
+	* main/OpenId/OpenIdConsumer.class.php,
+	main/OpenId/OpenIdExtension.class.php,
+	main/OpenId/OpenIdExtensionAttributeExchange.class.php,
+	main/OpenId/OpenIdCredentials.class.php,
+	main/OpenId/OpenIdExtensionSreg.class.php: openId 2.0 support, 
+	extesions support implemented, sreg and attribute exchange 
+	supports - thanks to Alexander V. Solomatin (aka Lom).
+
 2010-02-21	Sergey S. Sergeev
 
 	* main/Base/Hstore.class.php: set(), drop() added.
